@@ -24,6 +24,7 @@ Version 0.0.2b (in progress)
 * [Tweaked] Search icon modified to make it's function more clear.
 * [Fixed] Can now click on theme image to select theme.
 * [Improved] Games played limit for pre-defined HoF awards set to 81.
+* [Added] Secondary sort column for divisions page.
 
 Version 0.0.1b (12/07/2022)
 * [Fixed] Corrected an error in the SRAT formula.
